что-то вырисовывается

--- a/django_itm/test_tesseract/templates/home.html
+++ b/django_itm/test_tesseract/templates/home.html
@@ -10,7 +10,7 @@
             <i class="bi bi-upload"></i> Загрузить новый файл
         </a>
         <a href="{% url 'delete_document' %}" class="btn btn-outline-danger">
-            <i class="bi bi-trash"></i> Управление документами
+            <i class="bi bi-trash"></i> Удалить картинОчки
         </a>
     </div>
 
